--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dev_dependencies:
     sdk: flutter
   provider: ^3.0.0
   intl: ^0.16.1
+  http: ^0.12.0+4
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
