--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dev_dependencies:
   provider: ^3.0.0
   intl: ^0.16.1
   http: ^0.12.0+4
+  shared_preferences: ^0.5.6+3
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
